# autoarena

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  always_tie.py  pyproject.toml
.github/workflows/: autoarena.yml  autostack.yml  backend.yml  champion.yml  changelog.yml  ci.yml  frontend.yml  release.yml  ui.yml
autoarena/: __main__.py  args.py  error.py  log.py  main.py  seed.py  server.py  ui_router.py
autoarena/api/: api.py  router.py  utils.py
autoarena/client/: client.py
autoarena/judge/: anthropic.py  base.py  bedrock.py  cohere.py  custom.py  executor.py  factory.py  gemini.py  groq.py  huggingface.py  human.py  ollama.py  openai.py  together.py  utils.py  wrapper.py
autoarena/service/: elo.py  fine_tuning.py  head_to_head.py  judge.py  model.py  project.py  task.py
autoarena/store/: database.py  environment.py  key_manager.py  schema.sql  seed.py  utils.py
autoarena/store/migration/: 000__schema.sql  README.md
autoarena/task/: auto_judge.py
autostack/: __main__.py  args.py  error.py  log.py  main.py  ui_router.py
autostack/api/: api.py  router.py
autostack/judge/: anthropic.py  base.py  cohere.py  executor.py  factory.py  gemini.py  human.py  ollama.py  openai.py  utils.py
autostack/service/: elo.py  head_to_head.py  judge.py  model.py  task.py
autostack/store/: database.py  schema.sql  seed.py
backend/: pyproject.toml
backend/autostack/: __main__.py  database.py  elo.py  judge.py  main.py  tasks.py
backend/autostack/api/: api.py  router.py  service.py
backend/autostack/judge/: anthropic.py  executor.py  factory.py  gemini.py  ollama.py  openai.py  utils.py
backend/autostack/service/: elo.py  fine_tuning.py  head_to_head.py  judge.py  model.py  project.py  task.py
backend/autostack/store/: database.py  schema.sql  seed.py
champion/: __main__.py  main.py  ui_router.py
champion/api/: router.py
champion/judge/: anthropic.py  base.py  cohere.py  executor.py  factory.py  gemini.py  human.py  ollama.py  openai.py  utils.py
champion/service/: elo.py  fine_tuning.py  head_to_head.py  judge.py  model.py  project.py  task.py
champion/store/: database.py  seed.py
data/: README.md
examples/: convince_me_AutoArena_works.ipynb  convince_me_this_works.ipynb
examples/TruthfulQA/: TruthfulQA.csv
examples/convince_me_AutoArena_works/: convince_me_AutoArena_works.ipynb
examples/convince_me_AutoArena_works/lmsys-chatbot-arena/: train_subset.csv
examples/convince_me_AutoArena_works/models/: gpt-3.5-turbo-0613.csv  gpt-4-0314.csv  gpt-4-0613.csv  gpt-4-1106-preview.csv  llama-2-70b-chat.csv  llama-2-7b-chat.csv  vicuna-13b.csv  vicuna-33b.csv
examples/creating_a_jury_for_truthfulness/: .env  api.py  creating_a_jury_for_truthfulness.ipynb  generate_responses.py
frontend/: .eslintrc.cjs  README.md  index.html  jest.config.js  package.json  tsconfig.app.json
frontend/src/: App.tsx
frontend/src/components/: AddModel.tsx  AddModelButton.tsx  CreateNewProject.tsx  CreateProjectButton.tsx  DeleteModelButton.tsx  EloWidget.tsx  HeadToHead.tsx  HeadToHeadBattle.tsx  Home.tsx  Judges.tsx  Leaderboard.tsx  NonIdealState.tsx  OnboardingTimeline.tsx  Page.tsx  PageNotFound.tsx  ProjectSelect.tsx  TasksDrawer.tsx  paths.ts  useHeadToHeadBattles.ts  useModels.ts  useProjects.ts  useUrlState.ts
frontend/src/hooks/: useCreateJudge.ts  useCreateProject.ts  useDeleteJudge.ts  useDeleteModel.ts  useDeleteProject.ts  useHeadToHeadBattles.ts  useHeadToHeads.ts  useJudges.ts  useModelEloHistory.ts  useModelHeadToHeadStats.ts  useModelResults.ts  useModels.ts  useOnboardingGuideDismissed.ts  useProject.ts  useProjects.ts  useRecomputeLeaderboard.ts  useSubmitHeadToHeadJudgement.ts  useTasks.ts  useUpdateJudge.ts  useUploadModelResults.ts
scripts/: build.sh  seed_head_to_heads.py
tests/integration/: conftest.py  test_app.py  test_cli.py  test_database.py  test_tasks.py  test_ui.py
tests/integration/api/: conftest.py  test_elo.py  test_head_to_head.py  test_judges.py  test_models.py  test_projects.py  test_tasks.py
tests/integration/judge/: conftest.py  test_factory.py  test_judge.py  test_utils.py  test_wrapper.py
tests/integration/service/: test_head_to_head.py  test_projects.py  test_tasks.py
tests/unit/: test_log.py
tests/unit/judge/: conftest.py  test_executor.py  test_factory.py  test_judge.py  test_utils.py  test_wrapper.py
tests/unit/service/: test_elo.py
ui/: .prettierrc.cjs  .stylelintrc  README.md  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.lib.config.ts
ui/src/: App.tsx  global.css
ui/src/components/: AddModelButton.tsx  CreateProjectButton.tsx  DeleteModelButton.tsx  DeleteProjectModal.tsx  (+15 more)
(+123 files in other folders)
