[tool.poetry]
name = "autoarena"
version = "0.0.0"  # version is automatically set on release
description = ""
authors = ["Kolena Engineering <eng@kolena.com>"]
readme = "README.md"
license = "Apache-2.0"
include = ["ui/dist/*", "ui/dist/assets/*"]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "^0"
pandas = "^2"
uvicorn = "^0.30"
duckdb = "^1"
coolname = "^2"
pyarrow = "^17"
tqdm = "^4"
python-multipart = "^0"
loguru = "^0"
tenacity = "^9"
# TODO: these client libraries should be arranged into extras that are installed as needed (imports are lazy)
openai = "^1"
ollama = "^0"
anthropic = "^0"
cohere = "^5"
google-generativeai = "^0"
transformers = "^4"
torch = "^2"
together = "^1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.3.2"
twine = "^5.1.1"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
