[project]
name = "autoarena"
version = "0.0.0"  # version is automatically set on release
description = ""
authors = [
    { name = "Kolena Engineering", email = "eng@kolena.com" }
]
readme = "README.md"
license = "Apache-2.0"
include = ["ui/dist/*", "ui/dist/assets/*"]
requires-python = ">=3.9,<4"
dependencies = [
    "fastapi<1",
    "pandas>=2,<3",
    "uvicorn<1",
    "duckdb<1",
    "pyarrow>=17,<18",
    "tqdm>=4,<5",
    "python-multipart",
    "loguru<1",
    "tenacity>=9,<10",
    # TODO: these client libraries should be arranged into extras that are installed as needed
    "openai>=1,<2",
    "ollama<1",
    "anthropic<1",
    "cohere>=5,<6",
    "google-generativeai<1",
    "transformers>=4,<5",
    "torch>=2,<3",
    "together>=1,<2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3,<4",
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "twine>=5,<6"
]

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
