[project]
name = "autoarena"
version = "0.0.0"  # version is automatically set on release
description = ""
authors = [
    { name = "Kolena Engineering", email = "eng@kolena.com" }
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9,<4"
keywords = [
    "LLM",
    "Machine Learning",
    "ML",
    "Artificial Intelligence",
    "AI",
    "AI Testing",
    "AI Evaluation",
    "LLM Evaluation",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "fastapi<1",
    "pandas>=2,<3",
    "uvicorn<1",
    "duckdb",
    "pyarrow",
    "tqdm>=4,<5",
    "python-multipart",
    "loguru<1",
    "tenacity>=9,<10",
    # TODO: these client libraries should be arranged into extras that are installed as needed
    "openai>=1,<2",
    "ollama<1",
    "anthropic<1",
    "cohere>=5,<6",
    "google-generativeai<1",
    "transformers>=4,<5",
    "torch>=2,<3",
    "together>=1,<2",
    "pytimeparse>=1.1.8",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3,<4",
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "twine>=5,<6"
]

[project.urls]
Homepage = "https://www.kolena.com/autoarena"
Repository = "https://github.com/kolenaIO/autoarena.git"

[tool.ruff]
line-length = 120

[tool.mypy]
disallow_untyped_defs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["autoarena"]

[tool.hatch.build.targets.sdist.force-include]
"ui/dist" = "autoarena/ui"
