[tool.poetry]
name = "autostack"
version = "0.1.0"
description = ""
authors = ["Kolena Engineering <eng@kolena.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
pandas = "^2.2.2"
numpy = "^2.1.0"
uvicorn = "^0.30.6"
duckdb = "^1.0.0"
coolname = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
